# Android-Keyboard

./: .gitignore  Build a New Virtual Keyboard Project .md  Build a New Virtual Keyboard Project.md  Customized Keyboard Features.md  FAQ.md  LICENSE  Language List.md  Migration Guide .md  Migration Guide.md  README.md  Reference.md  build.gradle  local.properties
app/: build.gradle  proguard-rules.pro  zengine.sign
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 273.xz  dictionary.json  test_lottie_click_effect.json
app/src/main/cpp/: Android.mk  CMakeLists.txt
app/src/main/cpp/jniapi/: CMakeLists.txt
app/src/main/cpp/src/: CMakeLists.txt
app/src/main/res/drawable/: bg_external_theme_rgb_more_key.xml  bg_external_theme_rgb_more_key_normal.xml  bg_external_theme_rgb_more_key_pressed.xml  bg_external_theme_rgb_spacebar.xml  bg_external_theme_rgb_spacebar_normal.xml  bg_external_theme_rgb_spacebar_pressed.xml  bg_gif_search_clear_button.xml  bg_gif_search_edit_text_layout.xml  bg_gif_search_edit_text_right_search.xml  bg_keyboard_menu_switch_thumb.xml  bg_keyboard_menu_switch_thumb_on.xml  bg_keyboard_menu_switch_track.xml  bg_keyboard_menu_switch_track_off.xml  bg_keyboard_menu_switch_track_on.xml  bg_theme_manage_item_stroke.xml  bg_theme_manage_item_stroke_normal.xml  bg_theme_manage_item_stroke_selected.xml  bg_theme_manage_preview.xml  bg_theme_manage_preview_apply_button.xml  bg_theme_manage_preview_delete_button.xml  dialog_select_layoutset_background.xml  ic_clipboard_arrow_down.xml  ic_clipboard_copy.xml  ic_clipboard_paste.xml  ic_clipboard_text_copied.xml  ic_clipboard_trash.xml  ic_gif_search.xml  ic_gif_search_clear.xml  ic_gif_search_close.xml  ic_icon_language.xml  ic_icon_return.xml  ic_icon_settings.xml  ic_keyboard_menu_account.xml  ic_keyboard_menu_adjust_size.xml  ic_keyboard_menu_auto_correction.xml  ic_keyboard_menu_backup.xml  ic_keyboard_menu_close.xml  ic_keyboard_menu_floating_keyboard.xml  ic_keyboard_menu_floating_keyboard_selected.xml  ic_keyboard_menu_hide_keyboard.xml  (+35 more)
app/src/main/res/drawable-xxhdpi/: ic_keyboard_menu_theme_manage.xml
app/src/main/res/layout/: activity_keyboard_theme_manage.xml  activity_language_added.xml  activity_language_choose.xml  activity_main.xml  custom_preference.xml  customized_chinesed_composing_textview.xml  customized_chinesed_suggest_view.xml  customized_suggest_view.xml  customized_suggest_view_item.xml  dialogfg_multi_locale_remove.xml  dialogfg_select_layoutset.xml  fragment_create_custom_theme.xml  fragment_theme_manage_preview_bottom_sheet.xml  fragment_theme_manage_preview_input_view.xml  gif_search.xml  gif_sending_gif_page.xml  gif_sending_gif_recyclerview_layout.xml  gif_sending_main.xml  gif_sending_recent_page.xml  gif_sending_recent_page_item.xml  gif_sending_tab.xml  input_view.xml  keyboard_clipboard.xml  keyboard_clipboard_rv_item.xml  keyboard_menu.xml  keyboard_menu_content.xml  keyboard_menu_divider_line.xml  keyboard_selector.xml  language_multitype_dialog.xml  loading_page.xml  more_suggestions.xml  setup_steps_title.xml  setup_welcome_title.xml  setup_wizard.xml  subtype_switch.xml  subtype_switch_dialog_view.xml  viewholder_added_child.xml  viewholder_added_multi.xml  viewholder_added_single.xml  viewholder_charset.xml  (+8 more)
app/src/main/res/menu/: language_choose_search.xml
app/src/main/res/values-af/: strings-appname.xml
app/src/main/res/values-am/: strings-appname.xml
app/src/main/res/values-ar/: strings-appname.xml
app/src/main/res/values-as/: strings-appname.xml
app/src/main/res/values-b+sr+Latn/: strings-appname.xml
app/src/main/res/values-be/: strings-appname.xml
app/src/main/res/values-bg/: strings-appname.xml
app/src/main/res/values-bn/: strings-appname.xml
app/src/main/res/values-bs/: strings-appname.xml
app/src/main/res/values-ca/: strings-appname.xml
app/src/main/res/values-cs/: strings-appname.xml
app/src/main/res/values-da/: strings-appname.xml
app/src/main/res/values-de/: strings-appname.xml
app/src/main/res/values-el/: strings-appname.xml
app/src/main/res/values-en-rIN/: strings-appname.xml
app/src/main/res/values-en-rXC/: strings-appname.xml
app/src/main/res/values-es/: strings-appname.xml
app/src/main/res/values-es-rUS/: strings-appname.xml
app/src/main/res/values-et/: strings-appname.xml
app/src/main/res/values-eu/: strings-appname.xml
app/src/main/res/values-fa/: strings-appname.xml
app/src/main/res/values-fi/: strings-appname.xml
app/src/main/res/values-fr/: strings-appname.xml
app/src/main/res/values-fr-rCA/: strings-appname.xml
app/src/main/res/values-gl/: strings-appname.xml
app/src/main/res/values-gu/: strings-appname.xml
app/src/main/res/values-hi/: strings-appname.xml
app/src/main/res/values-hr/: strings-appname.xml
app/src/main/res/values-hu/: strings-appname.xml
app/src/main/res/values-hy/: strings-appname.xml
app/src/main/res/values-in/: strings-appname.xml
app/src/main/res/values-is/: strings-appname.xml
app/src/main/res/values-it/: strings-appname.xml
app/src/main/res/values-iw/: strings-appname.xml
app/src/main/res/values-ja/: strings-appname.xml
app/src/main/res/values-ka/: strings-appname.xml
app/src/main/res/values-kk/: strings-appname.xml
app/src/main/res/values-km/: strings-appname.xml
app/src/main/res/values-kn/: strings-appname.xml
app/src/main/res/values-ko/: strings-appname.xml
app/src/main/res/values-ky/: strings-appname.xml
app/src/main/res/values-lo/: strings-appname.xml
app/src/main/res/values-lt/: strings-appname.xml
app/src/main/res/values-lv/: strings-appname.xml
app/src/main/res/values-mk/: strings-appname.xml
app/src/main/res/values-ml/: strings-appname.xml
app/src/main/res/values-mn/: strings-appname.xml
app/src/main/res/values-mr/: strings-appname.xml
doc_Chinese/: DownloadTheme资源包格式.md  Readme.md  Reference.md  从基于AOSP的项目迁移到Zengine.md  定制键盘功能.md  常见问题.md  新的输入法项目构建 .md
gradle/wrapper/: gradle-wrapper.properties
(+186 files in other folders)
